chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,12 @@ debug.log
 __debug_bin
 
 # ------------------------------------------------------------------------------
+# Spec-Driven Development
+# ------------------------------------------------------------------------------
+.kiro/
+.claude
+
+# ------------------------------------------------------------------------------
 # Miscellaneous
 # ------------------------------------------------------------------------------
 tmp/
