chore: ignore bff binary

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # ------------------------------------------------------------------------------
 # Binaries
 bin/
+bff/server
+services/*/server
 *.exe
 *.exe~
 *.dll
