fix(docker): add missing gen module to BFF Dockerfile and enable JWT strategy
- Add gen module copy to BFF Dockerfile for proper dependency resolution
- Set STRATEGIES_ACCESS_TOKEN=jwt in Hydra environment for JWT token issuance

--- a/bff/Dockerfile
+++ b/bff/Dockerfile
@@ -7,6 +7,7 @@ RUN apk add --no-cache git
 
 # Copy go.mod files for dependency resolution
 COPY bff/go.mod bff/go.sum ./bff/
+COPY gen/go.mod gen/go.sum ./gen/
 COPY pkg/connect/go.mod pkg/connect/go.sum ./pkg/connect/
 
 # Download dependencies
@@ -16,6 +17,7 @@ RUN go mod download
 # Copy source
 WORKDIR /app
 COPY bff/ ./bff/
+COPY gen/ ./gen/
 COPY pkg/connect/ ./pkg/connect/
 
 # Build
