--- a/.github/workflows/proto-pr-analysis.yml
+++ b/.github/workflows/proto-pr-analysis.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Analyze Proto Dependencies
-        uses: daisuke8000/coral@latest
+        uses: daisuke8000/coral@v0.1.4
         with:
           proto-path: 'proto'
           comment-on-pr: 'true'
